ejecutar.txt
Corrige este error al ejecutar el vigia en el cliente:

  File "/home/profesor/Escritorio/vigia-master/client.py", line 288
    self.top.update(); self.top.focus_force(); try: self.top.grab_set_global()
                                               ^^^
SyntaxError: invalid syntax
